--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 - Hi, I’m Shashank
 - I’m interested in cryptography
 - I’m currently learning about kernel development
-- I’m looking to collaborate on fun projects
+- I’m looking to collaborate on challenging projects
 - Reach out to me through email: u22cs060@coed.svnit.ac.in
